appId: com.cisa.campus
---
- launchApp:
    clearState: true
- tapOn: "Email"
- inputText: "cisa-student@hub.com"
- tapOn: "Password"
- inputText: "cisastudent3!"
- tapOn: "Sign in"

# Student View
- assertVisible: "Friday Gathering"
- tapOn: "Prayer"
- assertVisible: "Ask the team to pray"
- tapOn: "You"
- assertVisible: "WHO TO REACH"

# Community View Sign in
- launchApp:
    clearState: true
- tapOn: "Email"
- inputText: "cisa-community@hub.com"
- tapOn: "Password"
- inputText: "cisacommunity4!"
- tapOn: "Sign in"

# Community Hospitality Offer
- assertVisible: "OPEN YOUR HOME"
- assertVisible: "Offer to host"
- tapOn: "Prayer"
- assertVisible: "I'm praying for this"
